--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.13.1
+GeoAlchemy2==0.15.1
 greenlet==3.0.3
 Mako==1.3.5
 MarkupSafe==2.1.5
+packaging==24.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.30
 typing_extensions==4.12.1
