--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.13.1
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.6.2
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.7
 dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.111.0
@@ -14,18 +16,25 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iniconfig==2.0.0
 Jinja2==3.1.4
+jwt==1.3.1
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+networkx==3.3
 orjson==3.10.3
 packaging==24.0
+pluggy==1.5.0
 psycopg2-binary==2.9.9
+pycparser==2.22
 pydantic==2.7.2
 pydantic_core==2.18.3
 pydentic==0.0.1.dev3
 Pygments==2.18.0
+pytest==8.2.1
+python-decouple==3.8
 python-dotenv==1.0.1
 python-multipart==0.0.9
 python-stdnum==1.20
