--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
   web:
     build: .
     container_name: grafo_web
-    command: uvicorn main:app --host 0.0.0.0 --port 8000
+    command: bash -c "source venv/bin/activate && uvicorn main:app --host 0.0.0.0 --port 8000"
     ports:
       - "8000:8000"
     volumes:
       - .:/app
     depends_on:
       - db
+      - alembic
 
   db:
     image: postgis/postgis:13-3.1
@@ -20,14 +21,14 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: grafos_db
     ports:
-      - "5432:5432"
+      - "5433:5433"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   alembic:
     build: .
     container_name: grafo_alembic
-    command: alembic upgrade head
+    command: bash -c "source venv/bin/activate && alembic upgrade head"
     volumes:
       - .:/app
     depends_on:
